--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,13 +1,23 @@
 body {
     background-color: #e0e0e0;
+    margin: 0px;
 }
-.header-div {
-  text-align: center;
+.head-fixed {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  height: 28px;
+  width: 100%;
+  z-index: 4;
+
+  background-color: #54c9ff;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  font-size: 140%;
   padding-top: 3px;
   padding-bottom: 5px;
   padding-left: 40px;
-  font-size: 140%;
-  background-color: #54c9ff;
+  text-align: center;
 }
 .footer-div {
   text-align: center;
@@ -17,11 +27,11 @@ body {
   font-size: 80%;
   background-color: #54c9ff;
 }
-.outer-div {
-  display: flex;
-  flex-direction: row;
-/*  align-items: flex-start;
-  vertical-align: top; */
+.menu-div-fixed {
+  position: fixed;
+  top: 32px;
+  left: 0px;
+  z-index: 3;
 }
 .menu-div {
   align-self: flex-start;
@@ -63,6 +73,14 @@ ul {
   border-bottom: 1px solid black;
 }
 
+.scrollable-div {
+  margin-top: 32px;
+  margin-left: 169px;
+  display: flex;
+  flex-direction: row;
+  /*  align-items: flex-start;
+  vertical-align: top; */
+}
 
 .command-div {
   display: inline-block;
